메일 인증되지 않은 사용자는 로그인 회원가입 메인페이지 접근못하게 리다렉트 로직 수정

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,7 +46,7 @@
     <%= render 'flash', name: name, msg: msg %>
 <% end %>
 
-<% if @current_user %>
+<% if @current_user && @current_user.activated? %>
     <header class="cd-main-header">
       <a href="/" class="cd-logo"><img src="/assets/nav_logo_mini.svg" alt="Logo"></a>
 
