--- a/app/views/evaluations/new.html.erb
+++ b/app/views/evaluations/new.html.erb
@@ -17,22 +17,7 @@
 
             <div class="score_title">총점</div>
             <div class="score_bar">
-              <%= f.select :point_overall, options_for_select([["드랍추천",1],["약간비추",2],["무난무난",3],["괜춘한편",4],["인생강의",5]]), {}, class: "p" %>
-            </div><br>
-
-            <div class="score_title">널널함</div>
-            <div class="score_bar score_bar_2">
-              <%= f.select :point_easiness, options_for_select([["헬오브헬",1],["약간힘듦",2],["무난무난",3],["널널한편",4],["리얼꿀강",5]]), {}, class: "p score_bar" %>
-            </div><br>
-
-            <div class="score_title">강의만족도</div>
-            <div class="score_bar score_bar_3">
-              <%= f.select :point_gpa_satisfaction, options_for_select([["핵불만족",1],["약간별로",2],["무난무난",3],["괜춘한편",4],["넘나만족",5]]), {}, class: "p score_bar" %>
-            </div><br>
-
-            <div class="score_title">학점만족도</div>
-            <div class="score_bar score_bar_4">
-              <%= f.select :point_clarity, options_for_select([["소금쟁이",1],["깐깐한편",2],["그냥평타",3],["은근히꿀",4],["갓—혜자",5]]), {}, class: "p score_bar" %>
+              <%= f.select :is_like, options_for_select([["좋아요",true],["싫어요",false]]), {}, class: "p" %>
             </div><br>
 
             <div class="score_title" style="vertical-align: top;">주관식 평가</div>
