--- a/app/views/evaluations/new.html.erb
+++ b/app/views/evaluations/new.html.erb
@@ -17,7 +17,7 @@
 
             <div class="score_title">총점</div>
             <div class="score_bar">
-              <%= f.select :is_like, options_for_select([["좋아요",true],["싫어요",false]]), {}, class: "p" %>
+              <%= f.select :is_like, options_for_select([["좋아요",true],["싫어요",false]]) %>
             </div><br>
 
             <div class="score_title" style="vertical-align: top;">주관식 평가</div>
