--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,6 +1,5 @@
 <div class="index_container">
   <div class="container-fluid">
-
     <div class="course_top">
       <div class="course_info_div">
         <div class="info_left">
@@ -71,11 +70,6 @@
               <% end %>
             </p>
           </div><%#////info_p_div%>
-          <div class="info_btn_div">
-            <button class="info_btn">
-              <i class="fa fa-pencil" aria-hidden="true"></i> 강의평가 쓰러가기
-            </button>
-          </div><%#////info_btn_div%>
         </div><%#////info_right_2%>
       </div><%#////course_info_div%>
     </div><%#////course_top %>
@@ -83,87 +77,65 @@
     <hr class="bottom_hr">
 
     <div class="info_score col-xs-12 row">
-
-      <div class="col-xs-6 col-sm-3">
-        <div class="score_head">
-          <div>총점</div>
-        </div>
-        <div class="score">
-          <div>
-            <canvas id="score1"></canvas>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-xs-6 col-sm-3">
-        <div class="score_head">
-          <div>널널함</div>
-        </div>
-        <div class="score">
-          <div>
-            <canvas id="score2"></canvas>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-xs-6 col-sm-3 score_m">
-        <div class="score_head">
-          <div>강의만족도</div>
-        </div>
-        <div class="score">
-          <div>
-            <canvas id="score3"></canvas>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-xs-6 col-sm-3 score_m">
-        <div class="score_head">
-          <div>학점만족도</div>
-        </div>
-        <div class="score">
-          <div>
-            <canvas id="score4"></canvas>
-          </div>
-        </div>
-      </div>
+      좋아요<%= @like %> (<%= @like_per %>)
+      싫어요<%= @dislike %> (<%= @dislike_per %>)
     </div>
-  </div>
 
-  <div class="tab_div">
-    <ul class="tab">
-      <li>
-        <a href="javascript:void(0)" class="review_tab tablinks" onclick="openCity(event, 'review')" id="defaultOpen">
-          <%= image_tag "/assets/review_on.svg", class: "tab_img", alt: "review" %>
-          학생들의 강의평가
-          <span class="review_count"><%= @course.evaluation_count %></span>
-        </a>
-      </li>
-      <li>
-        <a href="javascript:void(0)" class="wiki_tab tablinks" onclick="openCity(event, 'wiki')">
-          <%= image_tag "/assets/wiki_on.svg", class: "tab_img", alt: "review"%>
-          강의의 모든것, WIKI
+    <hr class="feed_hr">
 
-        </a>
-      </li>
-    </ul>
+    <div>
+      <%= form_for @evaluation do |f| %>
+            <div class="score_bar">
+              <%= f.hidden_field :course_id, value: @course.id %>
+              <%= f.select :is_like, options_for_select([["좋아요",true],["싫어요",false]]) %>
+            </div><br>
 
-    <div id="review" class="tabcontent">
-      <div class="sort_div">
-        <div class="sort_here">
-          <%# partial refresh needed %>
-          <%= form_tag do %>
-              <%= select_tag 'order', options_for_select(['최신순','총점순','총점역순'], @params), onchange: "$('#order').submit();" %>
-          <% end %>
-        </div>
-      </div>
-      <% if @course.evaluation_count > 0 %>
-          <%= render "evaluations" %>
+            <div class="score_title" style="vertical-align: top;">주관식 평가</div>
+            <div class="score_bar write_comment_div">
+              <%= f.text_area :body, placeholder: "위의 내용 외에 더 자세히 작성해주시면 큰 도움이 될거에요!\n(최소 3줄 이상 작성해야 합니다.)", rows: 8, class: "write_comment_box" %>
+              <br>
+              <%= f.submit "작성하기", class: "review_write_btn" %>
+            </div>
+          </div>
       <% end %>
     </div>
 
-    <div id="wiki" class="tabcontent">
-      <%= render "wikis" %>
+    <div class="tab_div">
+      <ul class="tab">
+        <li>
+          <a href="javascript:void(0)" class="review_tab tablinks" onclick="openCity(event, 'review')" id="defaultOpen">
+            <%= image_tag "/assets/review_on.svg", class: "tab_img", alt: "review" %>
+            학생들의 강의평가
+            <span class="review_count"><%= @course.evaluation_count %></span>
+          </a>
+        </li>
+        <li>
+          <a href="javascript:void(0)" class="wiki_tab tablinks" onclick="openCity(event, 'wiki')">
+            <%= image_tag "/assets/wiki_on.svg", class: "tab_img", alt: "review"%>
+            강의의 모든것, WIKI
+
+          </a>
+        </li>
+      </ul>
+
+      <div id="review" class="tabcontent">
+        <div class="sort_div">
+          <div class="sort_here">
+            <%# partial refresh needed %>
+            <%= form_tag do %>
+                <%= select_tag 'order', options_for_select(['최신순','총점순','총점역순'], @params), onchange: "$('#order').submit();" %>
+            <% end %>
+          </div>
+        </div>
+        <% if @course.evaluation_count > 0 %>
+            <%= render "evaluations" %>
+        <% end %>
+      </div>
+
+      <div id="wiki" class="tabcontent">
+        <%= render "wikis" %>
+      </div>
+
     </div>
   </div>
 </div>
@@ -213,300 +185,6 @@
 </script>
 <%# 스크립트 분리할 것 %>
 <script>
-  // default chart start //
-  // round corners
-  Chart.pluginService.register({
-    afterUpdate: function (chart) {
-      if (chart.config.options.elements.arc.roundedCornersFor !== undefined) {
-        var arc = chart.getDatasetMeta(0).data[chart.config.options.elements.arc.roundedCornersFor];
-        arc.round = {
-          x: (chart.chartArea.left + chart.chartArea.right) / 2,
-          y: (chart.chartArea.top + chart.chartArea.bottom) / 2,
-          radius: (chart.outerRadius + chart.innerRadius) / 2,
-          thickness: (chart.outerRadius - chart.innerRadius) / 2 - 1,
-          backgroundColor: arc._model.backgroundColor
-        }
-      }
-    },
-
-    afterDraw: function (chart) {
-      if (chart.config.options.elements.arc.roundedCornersFor !== undefined) {
-        var ctx = chart.chart.ctx;
-        var arc = chart.getDatasetMeta(0).data[chart.config.options.elements.arc.roundedCornersFor];
-        var startAngle = Math.PI / 2 - arc._view.startAngle;
-        var endAngle = Math.PI / 2 - arc._view.endAngle;
-
-        ctx.save();
-        ctx.translate(arc.round.x, arc.round.y);
-        console.log(arc.round.startAngle)
-        ctx.fillStyle = arc.round.backgroundColor;
-        ctx.beginPath();
-        ctx.arc(arc.round.radius * Math.sin(startAngle), arc.round.radius * Math.cos(startAngle), arc.round.thickness, 0, 2 * Math.PI);
-        ctx.arc(arc.round.radius * Math.sin(endAngle), arc.round.radius * Math.cos(endAngle), arc.round.thickness, 0, 2 * Math.PI);
-        ctx.closePath();
-        ctx.fill();
-        ctx.restore();
-      }
-    },
-  });
-
-  // remove legend
-  Chart.defaults.global.legend.display = false;
-  // remove tooltip
-  Chart.defaults.global.tooltips.enabled = false;
-
-
-  // write text plugin. 가운데 숫자 쓰기
-  Chart.pluginService.register({
-    afterUpdate: function (chart) {
-      if (chart.config.options.elements.center) {
-        var helpers = Chart.helpers;
-        var centerConfig = chart.config.options.elements.center;
-        var globalConfig = Chart.defaults.global;
-        var ctx = chart.chart.ctx;
-
-        var fontStyle = helpers.getValueOrDefault(centerConfig.fontStyle, globalConfig.defaultFontStyle);
-        var fontFamily = helpers.getValueOrDefault(centerConfig.fontFamily, globalConfig.defaultFontFamily);
-
-        if (centerConfig.fontSize)
-          var fontSize = centerConfig.fontSize;
-        // figure out the best font size, if one is not specified
-        else {
-          ctx.save();
-          var fontSize = helpers.getValueOrDefault(centerConfig.minFontSize, 1);
-          var maxFontSize = helpers.getValueOrDefault(centerConfig.maxFontSize, 256);
-          var maxText = helpers.getValueOrDefault(centerConfig.maxText, centerConfig.text);
-
-          do {
-            ctx.font = helpers.fontString(fontSize, fontStyle, fontFamily);
-            var textWidth = ctx.measureText(maxText).width;
-
-            // check if it fits, is within configured limits and that we are not simply toggling back and forth
-            if (textWidth < chart.innerRadius * 2 && fontSize < maxFontSize)
-              fontSize += 1;
-            else {
-              // reverse last step
-              fontSize -= 1;
-              break;
-            }
-          } while (true)
-          ctx.restore();
-        }
-
-        // save properties
-        chart.center = {
-          font: helpers.fontString(fontSize, fontStyle, fontFamily),
-          fillStyle: helpers.getValueOrDefault(centerConfig.fontColor, globalConfig.defaultFontColor)
-        };
-      }
-    },
-    afterDraw: function (chart) {
-      if (chart.center) {
-        var centerConfig = chart.config.options.elements.center;
-        var ctx = chart.chart.ctx;
-
-        ctx.save();
-        ctx.font = chart.center.font;
-        ctx.fillStyle = chart.center.fillStyle;
-        ctx.textAlign = 'center';
-        ctx.textBaseline = 'middle';
-        var centerX = (chart.chartArea.left + chart.chartArea.right) / 2;
-        var centerY = (chart.chartArea.top + chart.chartArea.bottom) / 2;
-        ctx.fillText(centerConfig.text, centerX, centerY);
-        ctx.restore();
-      }
-    },
-  })
-  // default chart end//
-
-  // 개별 chart start //
-  var config1 = {
-    // 차트 유형 지정
-    type: 'doughnut',
-    data: {
-// 			labels: [
-// 				"active",
-// 				"no"
-// 			],
-      datasets: [{
-        // 중요. % 설정하는 부분. 5점만점 반올림 -> [평균, 5-평균] 순서
-        data: [3.5, 1.5],
-        backgroundColor: [
-          "#ffc333",
-          "#fff3d6"
-        ],
-        hoverBackgroundColor: [
-          "#ffc333",
-          "#fff3d6"
-        ]
-      }]
-    },
-
-    options: {
-      cutoutPercentage: 85,
-      elements: {
-        // for rounded edge
-        arc: {
-          roundedCornersFor: 0
-        },
-        // 가운데 숫자
-        center: {
-          // the longest text that could appear in the center
-          maxText: '100%',
-          text: '3.5',
-          fontColor: '#ffc333',
-          fontFamily: "'Nanum Barun Gothic', 'Noto Sans KR', sans-serif",
-          fontStyle: 'normal',
-          // fontSize: 12,
-          // if a fontSize is NOT specified, we will scale (within the below limits) maxText to take up the maximum space in the center
-          // if these are not specified either, we default to 1 and 256
-          minFontSize: 1,
-          maxFontSize: 256,
-        }
-      }
-    }
-  };
-
-  var config2 = {
-    // 차트 유형 지정
-    type: 'doughnut',
-    data: {
-// 			labels: [
-// 				"active",
-// 				"no"
-// 			],
-      datasets: [{
-        data: [3, 2],
-        backgroundColor: [
-          "#ff5a5f",
-          "#ffdedf"
-        ],
-        hoverBackgroundColor: [
-          "#ff5a5f",
-          "#ffdedf"
-        ]
-      }]
-    },
-
-    options: {
-      cutoutPercentage: 85,
-      elements: {
-        //  percentageInnerCutout: 10,
-        // for rounded edge
-        arc: {
-          roundedCornersFor: 0
-        },
-        center: {
-          maxText: '100%',
-          text: '3',
-          fontColor: '#ff5a5f',
-          fontFamily: "'Nanum Barun Gothic', 'Noto Sans KR', sans-serif",
-          fontStyle: 'normal',
-          // fontSize: 12,
-          minFontSize: 1,
-          maxFontSize: 256,
-        }
-      }
-    }
-  };
-
-  var config3 = {
-    // 차트 유형 지정
-    type: 'doughnut',
-    data: {
-// 			labels: [
-// 				"active",
-// 				"no"
-// 			],
-      datasets: [{
-        data: [5, 0],
-        backgroundColor: [
-          "#27b5af",
-          "#d3f0ef"
-        ],
-        hoverBackgroundColor: [
-          "#27b5af",
-          "#d3f0ef"
-        ]
-      }]
-    },
-
-    options: {
-      cutoutPercentage: 85,
-      responsive: true,
-      elements: {
-        //  percentageInnerCutout: 10,
-        arc: {
-          roundedCornersFor: 0
-        },
-        center: {
-          maxText: '100%',
-          text: '5',
-          fontColor: '#27b5af',
-          fontFamily: "'Nanum Barun Gothic', 'Noto Sans KR', sans-serif",
-          fontStyle: 'normal',
-          // fontSize: 12,
-          minFontSize: 1,
-          maxFontSize: 256,
-        }
-      }
-    }
-  };
-
-  var config4 = {
-    // 차트 유형 지정
-    type: 'doughnut',
-    data: {
-// 			labels: [
-// 				"active",
-// 				"no"
-// 			],
-      datasets: [{
-        data: [4, 1],
-        backgroundColor: [
-          "#fc642d",
-          "#fee0d5"
-        ],
-        hoverBackgroundColor: [
-          "#fc642d",
-          "#fee0d5"
-        ]
-      }]
-    },
-
-    options: {
-      cutoutPercentage: 85,
-      elements: {
-        arc: {
-          roundedCornersFor: 0
-        },
-        center: {
-          maxText: '100%',
-          text: '4',
-          fontColor: '#fc642d',
-          fontFamily: "'Helvetica Neue', 'Helvetica', 'Arial', sans-serif",
-          fontStyle: 'normal',
-          // fontSize: 12,
-          minFontSize: 1,
-          maxFontSize: 256,
-        }
-      }
-    }
-  };
-
-  var ctx1 = document.getElementById("score1").getContext("2d");
-  var score1 = new Chart(ctx1, config1);
-
-  var ctx2 = document.getElementById("score2").getContext("2d");
-  var score2 = new Chart(ctx2, config2);
-
-  var ctx3 = document.getElementById("score3").getContext("2d");
-  var score3 = new Chart(ctx3, config3);
-
-  var ctx4 = document.getElementById("score4").getContext("2d");
-  var score4 = new Chart(ctx4, config4);
-  //chart js end//
-
   //tab start//
   function openCity(evt, cityName) {
     // Declare all variables
