evaluation_count appears on view

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -77,8 +77,9 @@
     <hr class="bottom_hr">
 
     <div class="info_score col-xs-12 row">
-      좋아요<%= @like %> (<%= @like_per %>)
-      싫어요<%= @dislike %> (<%= @dislike_per %>)
+      좋아요<%= @like %> (<%= @like_per %>) - 싫어요<%= @dislike %> (<%= @dislike_per %>)
+      <br>
+      <%= @count %>명의 학생이 평가했습니다.
     </div>
 
     <hr class="feed_hr">
